--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:khaki;">
+<body style="background-color:rgb(230, 226, 198);">
   <head>
     <title>My GitHub Pages Site</title>
   </head>
