--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:rgb(230, 226, 198);">
   <head>
-    <title>My GitHub Pages Site</title>
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
-  </body>
-</html>
+    <meta
+  charset="utf-8">
+  <meta
+  name="viewport" 
+  content="width=device-width, initial-scale=1">
+  <title>Bisshoy's Website</title>
+  <style type="text/css">body{margin:40px auto;
+  max-width:650px;
+  line-height:1.6;
+  font-size:18px;
+  color:#444;
+  padding:0 10px}h1,h2,h3{line-height:1.2}
+  </style>
+  
+
+</head><body><header><h1>Bisshoy's Website.</h1>
