--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta
   name="viewport" 
   content="width=device-width, initial-scale=1">
-  <title>Bisshoy's Website!!!!</title>
+  <title>Bisshoy's Website</title>
   <style type="text/css">body{margin:40px auto;
   max-width:650px;
   line-height:1.6;
@@ -16,4 +16,4 @@
   </style>
   
 
-</head><body><header><h1>Bisshoy's Website.</h1>
+</head><body><header><h1>Bisshoy's Website!!!!</h1>
