--- a/index.html
+++ b/index.html
@@ -4,33 +4,46 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bisshoy's Website</title>
-  <style type="text/css">
-    body {
-      margin:40px auto;
-      max-width:650px;
-      line-height:1.6;
-      font-size:18px;
-      color:#444;
-      padding:0 10px
-    }
+      <title>Bisshoy's Website</title>
+    <style type="text/css">
+      body {
+        margin:40px auto;
+        max-width:650px;
+        line-height:1.6;
+        font-size:18px;
+        color:#444;
+        padding:0 10px
+      }
     
-    h1,h2,h3 {line-height:1.2}
-    h1 {text-align: center}
-  </style>
-
+      h1,h2,h3 {line-height:1.2}
+      h1 {text-align: center}
+    </style>
   </head>
-    <body>
-      <header>
-        <h1>Bisshoy's Website</h1>
-      </header>
 
-      <p>
-        This is my first paragraph. I'm not really sure why it's behaving
-        this way, but I think the last thing was just some sort of coincidence.
-        In any case, this formatting should allow me to write paragraphs. To be
-        honest, I'm just trying to figure out what all the stuff at the 
-        beginning is supposed to be. I mean, it's not too hard to guess, for 
-        some of it. Pretty sure I don't need a PhD to figure out what "color"
-        does. Still, gotta fsck around with the padding and margin stuff. 
-      </p>
+  <body>
+    <header>
+      <h1>Bisshoy's Website</h1>
+    </header>
+
+    <p> 
+      This is my first paragraph. I'm not really sure why it's behaving
+      this way, but I think the last thing was just some sort of coincidence.
+      In any case, this formatting should allow me to write paragraphs. To be
+      honest, I'm just trying to figure out what all the stuff at the 
+      beginning is supposed to be. I mean, it's not too hard to guess, for 
+      some of it. Pretty sure I don't need a PhD to figure out what "color"
+      does. Still, gotta fsck around with the padding and margin stuff. 
+    </p> 
+
+    <p>
+      This is another paragraph.
+    </p>
+
+    <p>
+      This is a link to the second page, hopefully.
+    </p>
+
+    <a href="./page2.html">Click Here!</a>
+
+  </body>
+</html>
