--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       This is a link to the second page, hopefully.
     </p>
 
-    <a href="./page2.html">Click Here!</a>
+    <a href="./about.html">Click Here!</a>
 
   </body>
 </html>
