--- a/index.html
+++ b/index.html
@@ -2,22 +2,10 @@
 
 <html>
   <head>
+    <link href="styles.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Bisshoy's Website</title>
-    <style type="text/css">
-      body {
-        margin:40px auto;
-        max-width:650px;
-        line-height:1.6;
-        font-size:18px;
-        color:#444;
-        padding:0 10px
-      }
-    
-      h1,h2,h3 {line-height:1.2}
-      h1 {text-align: center}
-    </style>
   </head>
 
   <body>
