--- a/about.html
+++ b/about.html
@@ -10,11 +10,12 @@
 
   <body>
     <header>
-      <h1>Second Page</h1>
+      <h1>About</h1>
     </header>
 
     <p>
-      This my second page.
+      This my "About" page. There is no real content. This entire thing is a 
+      massive work in progress. 
     </p>
 
     <a href="./">Click here to go back to Home Page</a>
