--- a/index.html
+++ b/index.html
@@ -24,14 +24,11 @@
     </p> 
 
     <p>
-      OH THANK GOD IT WORKED! 
-    </p>
-
-    <p>
-      This is a link to the second page, hopefully.
+      Below is a link to the about page.
     </p>
 
     <a href="./about.html">Click Here!</a>
 
   </body>
 </html>
+
