--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
     </header>
 
     <p>
-      This my "About" page. There is no real content. This entire thing is a 
-      massive work in progress. 
+      Bisshoy Anwar is a very bored student on summer break, currently making 
+      a very slapdash website to host content he hasn't thought through yet.  
     </p>
 
     <a href="./">Click here to go back to Home Page</a>
