--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </p> 
 
     <p>
-      Below is a link to the about page.
+      Below is a link to the about page. Check.
     </p>
 
     <a href="./about.html">Click Here!</a>
