Check for normal

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </p> 
 
     <p>
-      Below is a link to the about page. Check.
+      Below is a link to the about page. There is no other content. This 
+      might just be a bunch of rambling. 
     </p>
 
     <a href="./about.html">Click Here!</a>
