--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>Bisshoy's Website</h1>
     </header>
 
+    <br>
     <p> 
       This is my first paragraph. I'm not really sure why it's behaving
       this way, but I think the last thing was just some sort of coincidence.
@@ -28,7 +29,20 @@
       might just be a bunch of rambling. 
     </p>
 
+    <br>
+    <h3>Things</h3>
+    <li>Flat design</li>
+    <li>Proliferation of side hustles</li>
+    <li>Lack of ownership</li>
+    <li>Docotorow stuff</li>
+    <li>Complacency</li>
+    <li>Every day feels the same</li>
+    <li>Web 1.0 vs 2.0 vs 3.0</li>
+    <li>I think studing CS is turning me into a Luddite</li>
+
+    <p>
     <a href="./about.html">Click Here!</a>
+    </p>
 
   </body>
 </html>
