--- a/about.html
+++ b/about.html
@@ -18,6 +18,6 @@
       a very slapdash website to host content he hasn't thought through yet.  
     </p>
 
-    <a href="./">Click here to go back to Home Page</a>
+    <p>Click <a href="./">HERE</a> to go back to the home page.</p>
 
 </html>
