More bullet points

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <li>Every day feels the same</li>
     <li>Web 1.0 vs 2.0 vs 3.0</li>
     <li>I think studing CS is turning me into a Luddite</li>
+    <li>I think everyone hate each other</li>
+    <li>Class war</li>
 
     <p>
     <a href="./about.html">Click Here!</a>
