More points; fixed grammar

--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
     <li>Every day feels the same</li>
     <li>Web 1.0 vs 2.0 vs 3.0</li>
     <li>I think studing CS is turning me into a Luddite</li>
-    <li>I think everyone hate each other</li>
+    <li>I think everyone hates each other</li>
     <li>Class war</li>
+    <li>Increasing hidden control</li>
+    <li>Internet hive-mind</li>
+    <li>"Celebrity culture" applied to politics</li>
+    <li>Why can politicians trade stocks?</li>
+    <li>Is this even fun anymore?</li>
 
     <p>
     <a href="./about.html">Click Here!</a>
