--- a/about.html
+++ b/about.html
@@ -18,6 +18,10 @@
       a very slapdash website to host content he hasn't thought through yet.  
     </p>
 
+    <p>
+      La la la la May 17th.
+    </p>
+
     <p>Click <a href="./">HERE</a> to go back to the home page.</p>
 
 </html>
