Added jarg line

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     </p> 
 
     <p>
+      This should turn into a new jargon file for literally no one but 
+      myself. 
+    </p>
+
+    <p>
       Below is a link to the about page. There is no other content. This 
       might just be a bunch of rambling. 
     </p>
