--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <p>
       This should turn into a new jargon file for literally no one but 
-      myself. 
+      myself. These things don't really work without anonymity.
     </p>
 
     <p>
