--- a/index.html
+++ b/index.html
@@ -15,19 +15,13 @@
 
     <br>
     <p> 
-      This is my first paragraph. I'm not really sure why it's behaving
-      this way, but I think the last thing was just some sort of coincidence.
-      In any case, this formatting should allow me to write paragraphs. To be
-      honest, I'm just trying to figure out what all the stuff at the 
-      beginning is supposed to be. I mean, it's not too hard to guess, for 
-      some of it. Pretty sure I don't need a PhD to figure out what "color"
-      does. Still, gotta fsck around with the padding and margin stuff. 
+      Here's a download link for the Project 2 skeleton.
+      Hope it helps!
     </p> 
 
-    <p>
-      This should turn into a new jargon file for literally no one but 
-      myself. These things don't really work without anonymity.
-    </p>
+    <a href="/images/myw3schoolsimage.jpg" download>
+      <img src="./p2skel.cpp" alt="Project 2 Skeleton">
+    </a>
 
     <p>
       Below is a link to the about page. There is no other content. This 
