--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
       Hope it helps!
     </p> 
 
-    <a href="/images/myw3schoolsimage.jpg" download>
-      <img src="./p2skel.cpp" alt="Project 2 Skeleton">
-    </a>
+    <a href="./p2skel.cpp" download>DOWNLOAD< /a>
 
     <p>
       Below is a link to the about page. There is no other content. This 
