--- a/index.html
+++ b/index.html
@@ -1,34 +1,1 @@
-<!DOCTYPE html>
-
-<html>
-  <head>
-    <link href="styles.css" rel="stylesheet">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Bisshoy's Website</title>
-  </head>
-
-  <body>
-    <header>
-      <h1>Bisshoy's Website</h1>
-    </header>
-
-    <br>
-    <p> 
-      Here's a download link for the Project 2 skeleton.
-    </p> 
-
-    <a href="./p2skel.cpp" download>DOWNLOAD</a>
-
-    <p>
-      Below is a link to the about page. There is no other content. This 
-      might just be a bunch of rambling. 
-    </p>
-
-    <p>
-    <a href="./about.html">Click Here!</a>
-    </p>
-
-  </body>
-</html>
-
+Hello, my name is Bisshoy.
